[project]
name = "data_utils"
version = "0.1.0"
description = "Utility functions for working with Spark and Pandas"
authors = [{ name="Ziyan Jiang", email="ziyanjiang.climbs@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ["pandas", "pyspark"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
